--- a/raspi/live/templates/index.html
+++ b/raspi/live/templates/index.html
@@ -1,3 +1,4 @@
+{% if user.is_authenticated %}
 <body>
 <div class = "container">
     <div class ="row">
@@ -8,3 +9,8 @@
     </div>
 </div>
 </body>
+{% else %}
+    <script>
+        location.href = "/"
+    </script>
+{% end if %}
