kakaologin staticfiles fix

--- a/raspi/live/templates/login.html
+++ b/raspi/live/templates/login.html
@@ -1,7 +1,7 @@
 <html>
     <body>
         {% load static %}
-            <a href='/accounts/soical/kakao/login/'>
+            <a href='/accounts/kakao/login/'>
                 <img class = "loginbutton" src="{% static 'image/kakao_login.png' %}" alt="카카오 로그인">
             </a>
     </body>
