--- a/raspi/live/templates/index.html
+++ b/raspi/live/templates/index.html
@@ -11,6 +11,7 @@
 </body>
 {% else %}
     <script>
-        location.href = "/"
+        alert('로그인이 필요합니다.');
+        location.href = "/";
     </script>
 {% endif %}
