--- a/raspi/live/templates/savedimg.html
+++ b/raspi/live/templates/savedimg.html
@@ -5,8 +5,8 @@
     <div class ="row">
         <div class = "col-lg-8 offset-lg-z">
 
-            <h3 class = "mt-5"> 초음파 센서값 : {{ result.UltraSonic }} 생성시기 {{ result.CreatedAt }}</h3>
-            <img src = "{% static 'image/savedimage/{{ result.imgNum }}' %}"width = "50%", height="50%">
+            <h3 class = "mt-5"> 초음파 센서값 : {{ UltraSonic }} 생성시기 {{ CreatedAt }}</h3>
+            <img src = "{% static 'image/savedimage/{{ imgNum }}' %}"width = "50%", height="50%">
         </div>
     </div>
 </div>
