--- a/raspi/live/templates/savedimg.html
+++ b/raspi/live/templates/savedimg.html
@@ -6,7 +6,7 @@
         <div class = "col-lg-8 offset-lg-z">
 
             <h3 class = "mt-5"> 초음파 센서값 : {{ UltraSonic }} 생성시기 {{ CreatedAt }}</h3>
-            <img src = "image/savedimage/{{ ImageNumber }}"width = "50%", height="50%">
+            <img src = "/static/savedimage/{{ ImageNumber }}.png"width = "50%", height="50%">
         </div>
     </div>
 </div>
