--- a/raspi/live/templates/login.html
+++ b/raspi/live/templates/login.html
@@ -8,6 +8,9 @@
 <html>
     <body>
         {% load static %}
+            <div class="logo-view">
+                <img class="logo" src="{% static 'image/logo.png' %}">
+            </div>
             <a href='/accounts/kakao/login/'>
                 <img class = "loginbutton" src="{% static 'image/kakao_login.png' %}" alt="카카오 로그인">
             </a>
