--- a/raspi/live/templates/login.html
+++ b/raspi/live/templates/login.html
@@ -1,6 +1,6 @@
 {% if user.is_authenticated %}
     <script>
-        location.href = "/index/"
+        location.href = "/main_loged_in/"
     </script>
 {% else %}
 
