--- a/raspi/live/templates/index.html
+++ b/raspi/live/templates/index.html
@@ -1,14 +1,92 @@
 {% if user.is_authenticated %}
-<body>
-<div class = "container">
-    <div class ="row">
-        <div class = "col-lg-8 offset-lg-z">
-            <h3 class = "mt-5">real time streaming </h3>
-            <img src = "{% url 'video_feed' %}"width = "50%", height="50%">
-        </div>
-    </div>
-</div>
-</body>
+<html>
+    <head>
+	<meta charset="utf-8">
+	<title>Pet Sitter</title>
+	<style type="text/css">
+		html, body {
+		    margin: 0;
+		    padding: 0;
+		    background-color: #53435B;
+		    font-family: Spoqa Han Sans Neo;
+		    -ms-user-select: none;
+		    -moz-user-select: -moz-none;
+		    -webkit-user-select: none;
+		    -khtml-user-select: none;
+		    user-select: none;
+		}
+
+		.container {
+		    width: 100vw;
+		    height: 100vh;
+		    text-align: center;
+		}
+		h2 {
+		    padding-top: 5vh;
+		    font-family: Spoqa Han Sans Neo;
+		    color: #53435B;
+		}
+		.main-view {
+		    width: 100vh;
+		    height: 100vh;
+		    background-color: #FBD157;
+		    margin-left: auto;
+		    margin-right: auto;
+		}
+
+		.streaming-view {
+		    width: 70vh;
+		    height: 70vh;
+		    background-color: #FBD157;
+		    border: 10px solid #53435B;
+		    box-sizing: border-box;
+		    margin-left: auto;
+		    margin-right: auto;
+		}
+		.button-view {
+		    position: absolute;
+		    
+		    top: 85vh;
+		    left: 50%;
+  		    transform: translateX(-50%);
+		}
+		.img-btn {
+		    width: 100px;
+		    height: auto;
+		    padding: 10px;
+		    margin-left: 100px;
+		    margin-right: 100px;
+		}
+		@font-face {
+		    font-family: "Spoqa Han Sans Neo";
+		    font-style: normal;
+		    font-weight: 500;
+		    src: url(/static/font/SpoqaHanSansNeo-Thin.eot);
+		    /* IE9 Compat Modes */
+		    src: url(/static/font/SpoqaHanSansNeo-Thin.eot?#iefix) format("embedded-opentype"), /* IE6-8 */
+		    url(/static/font/SpoqaHanSansNeo-Thin.woff) format("woff"), /* Mordern Browsers */
+		    url(/static/font/SpoqaHanSansNeo-Thin.otf) format("opentype");
+		    /* If not support woff */
+		}
+	</style>
+    </head>
+    <body>
+	{% load static %}
+	<div class = "container">
+		<div class = "main-view">
+			<h2>Real Time Streaming </h2>
+			<div class="streaming-view">
+				<img src = "{% url 'video_feed' %}"width = "70vh", height="70vh">
+			</div>
+			<div class="button-view">
+				<a href="/main_loged_in">
+					<img class="img-btn" src="{% static 'image/home.png' %}" alt="홈으로">
+				</a>
+			</div>
+		</div>
+	</div>
+    </body>
+</html>
 {% else %}
     <script>
         alert('로그인이 필요합니다.');
