--- a/raspi/live/templates/index.html
+++ b/raspi/live/templates/index.html
@@ -75,7 +75,7 @@
 		<div class = "main-view">
 			<h2>Real Time Streaming </h2>
 			<div class="streaming-view">
-				<img src = "{% url 'video_feed' %}"width = "500vh", height="500vh">
+				<img src = "{% url 'video_feed' %}"width = "100%", height="100%">
 			</div>
 			<div class="button-view">
 				<a href="/main_loged_in">
