--- a/raspi/live/templates/index.html
+++ b/raspi/live/templates/index.html
@@ -39,6 +39,7 @@
 		    height: 70vh;
 		    background-color: #FBD157;
 		    border: 10px solid #53435B;
+		    box-sizing: border-box;
 		    margin-left: auto;
 		    margin-right: auto;
 		}
