--- a/raspi/live/templates/urlget.html
+++ b/raspi/live/templates/urlget.html
@@ -8,7 +8,7 @@
     <script>
         function clicked(){
             const url = document.getElementById('url').value;
-            location.href("/youtube/"+url)
+            location.href="/youtube/"+url
             alert("영상 재생!")
             window.opener.location.reload();
             window.close();
