--- a/raspi/live/templates/urlget.html
+++ b/raspi/live/templates/urlget.html
@@ -1,88 +1,84 @@
+{% if user.is_authenticated %}
 <html>
-<style type="text/css">
-    html,
-    body {
-        margin: 0;
-        padding: 0;
-        background-color: #53435B;
-        font-family: Spoqa Han Sans Neo;
-        -ms-user-select: none;
-        -moz-user-select: -moz-none;
-        -webkit-user-select: none;
-        -khtml-user-select: none;
-        user-select: none;
-    }
-    
-    .container {
-        width: 100vw;
-        height: 100vh;
-        text-align: center;
-    }
-    
-    h2 {
-        padding-top: 5vh;
-        font-family: Spoqa Han Sans Neo;
-        color: #53435B;
-    }
-    
-    .main-view {
-        width: 100vh;
-        height: 100vh;
-        background-color: #FBD157;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    
-    .streaming-view {
-        width: 70vh;
-        height: 70vh;
-        background-color: #FBD157;
-        border: 10px solid #53435B;
-        box-sizing: border-box;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    
-    .button-view {
-        position: absolute;
-        top: 85vh;
-        left: 50%;
-        transform: translateX(-50%);
-    }
-    
-    .img-btn {
-        width: 100px;
-        height: auto;
-        padding: 10px;
-        margin-left: 100px;
-        margin-right: 100px;
-    }
-    
-    @font-face {
-        font-family: "Spoqa Han Sans Neo";
-        font-style: normal;
-        font-weight: 500;
-        src: url(/static/font/SpoqaHanSansNeo-Thin.eot);
-        /* IE9 Compat Modes */
-        src: url(/static/font/SpoqaHanSansNeo-Thin.eot?#iefix) format("embedded-opentype"), /* IE6-8 */
-        url(/static/font/SpoqaHanSansNeo-Thin.woff) format("woff"), /* Mordern Browsers */
-        url(/static/font/SpoqaHanSansNeo-Thin.otf) format("opentype");
-        /* If not support woff */
-    }
-</style>
+    <head>
+        <meta charset="utf-8">
+        <title>Pet Sitter</title>
+        <style type="text/css">
+            html,
+            body {
+                margin: 0;
+                padding: 0;
+                background-color: #53435B;
+                font-family: Spoqa Han Sans Neo;
+                -ms-user-select: none;
+                -moz-user-select: -moz-none;
+                -webkit-user-select: none;
+                -khtml-user-select: none;
+                user-select: none;
+            }
+            
+            .container {
+                width: 100%;
+                height: 100%;
+                text-align: center;
+            }
+            
+            h2 {
+                font-family: Spoqa Han Sans Neo;
+                color: #53435B;
+            }
+            
+            .main-view {
+                width: 350px;
+                height: 350px;
+                background-color: #FBD157;
+                margin-left: auto;
+                margin-right: auto;
+            }
+            
+            .img-btn {
+                width: 50px;
+                height: auto;
+                padding: 10px;
+            }
+            
+            @font-face {
+                font-family: "Spoqa Han Sans Neo";
+                font-style: normal;
+                font-weight: 500;
+                src: url(/static/font/SpoqaHanSansNeo-Thin.eot);
+                /* IE9 Compat Modes */
+                src: url(/static/font/SpoqaHanSansNeo-Thin.eot?#iefix) format("embedded-opentype"), /* IE6-8 */
+                url(/static/font/SpoqaHanSansNeo-Thin.woff) format("woff"), /* Mordern Browsers */
+                url(/static/font/SpoqaHanSansNeo-Thin.otf) format("opentype");
+                /* If not support woff */
+            }
+        </style>
+    </head>
 
-<body>
-    <label for="url">URL끝부분을 입력해주세요.</label>
-    <input type="text" id="url">
-    <button onclick="clicked()">영상 재생!</button>
-</body>
-<script>
-    function clicked() {
-        const url = document.getElementById('url').value;
-        location.href = "/youtube/" + url;
-        alert("영상 재생!");
-        window.opener.location.reload();
-        window.close();
-    }
-</script>
+    <body>
+        {% load static %}
+        <div class="container">
+            <div class="main-view">
+                <h2>URL 끝부분을 입력해주세요.</h2>
+                <input type="text" id="url">
+                <img class="img-btn" onclick="clicked()">
+            </div>
+        </div>
+    </body>
+    <script>
+        function clicked() {
+            const url = document.getElementById('url').value;
+            location.href = "/youtube/" + url;
+            alert("영상 재생!");
+            window.opener.location.reload();
+            window.close();
+        }
+    </script>
 <html>
+{% else %}
+    <script>
+	alert('로그인이 필요합니다.');
+        location.href = "/"
+    </script>
+{% endif %}
