--- a/raspi/live/templates/urlget.html
+++ b/raspi/live/templates/urlget.html
@@ -62,7 +62,7 @@
             <div class="main-view">
                 <h2>URL 끝부분을 입력해주세요.</h2>
                 <input type="text" id="url">
-                <img class="img-btn" onclick="clicked()">
+                <img class="img-btn" src="{%static 'image/play.png' %}" onclick="clicked()">
             </div>
         </div>
     </body>
