--- a/raspi/live/templates/urlget.html
+++ b/raspi/live/templates/urlget.html
@@ -18,8 +18,8 @@
             }
             
             .container {
-                width: 100%;
-                height: 100%;
+                width: 570px;
+                height: 350px;
                 text-align: center;
             }
             
@@ -36,6 +36,26 @@
                 margin-right: auto;
             }
             
+            .play-view {
+                width: 240px;
+                height: 135px;
+                background-color: #FBD157;
+                border: 10px solid #53435B;
+                box-sizing: border-box;
+                margin-top: auto;
+                margin-bottom: auto;
+                margin-left: auto;
+                margin-right: auto;
+            }
+
+            .btn-view {
+                position: absolute;
+		    
+                top: 200px;
+                left: 50%;
+                transform: translateX(-50%);
+            }
+
             .img-btn {
                 width: 50px;
                 height: auto;
@@ -60,9 +80,14 @@
         {% load static %}
         <div class="container">
             <div class="main-view">
-                <h2>URL 끝부분을 입력해주세요.</h2>
-                <input type="text" id="url">
-                <img class="img-btn" src="{%static 'image/play.png' %}" onclick="clicked()">
+                <div class="play-view">
+                    <h2>URL 끝부분을 입력해주세요.</h2>
+                    <input type="text" id="url">
+                    <div class="button-view">
+                        <img class="img-btn" src="{%static 'image/play.png' %}" onclick="clicked()">
+                    </div>
+                </div>
+                
             </div>
         </div>
     </body>
@@ -76,6 +101,7 @@
         }
     </script>
 <html>
+
 {% else %}
     <script>
 	alert('로그인이 필요합니다.');
