--- a/raspi/live/templates/index.html
+++ b/raspi/live/templates/index.html
@@ -77,6 +77,7 @@
 			<h2>Real Time Streaming</h2>
 			<div class="streaming-view">
 				<img src = "{% url 'video_feed' %}"width = "100%", height="100%">
+				<source src="{% url 'audio_feed'%}">
 			</div>
 			<div class="button-view">
 				<a href="/main_loged_in">
