--- a/raspi/live/templates/urlget.html
+++ b/raspi/live/templates/urlget.html
@@ -25,19 +25,14 @@
                 margin-right: auto;
             }
             
-            label {
-                font-family: Spoqa Han Sans Neo;
-                font-weight: bolder;
-                color: #53435B;
-                margin-top: 10px;
-            }
-            
             .main-view {
                 display: grid;
                 place-items: center;
                 width: 350px;
                 height: 350px;
                 background-color: #FBD157;
+                margin-left: auto;
+                margin-right: auto;
             }
             
             .play-view {
@@ -49,6 +44,12 @@
                 box-sizing: border-box;
                 margin-left: auto;
                 margin-right: auto;
+            }
+            
+            label {
+                font-family: Spoqa Han Sans Neo;
+                font-weight: bolder;
+                color: #53435B;
             }
 
             .type-url {
