--- a/raspi/live/templates/main_loged_in.html
+++ b/raspi/live/templates/main_loged_in.html
@@ -60,6 +60,9 @@
     <body>
         {% load static %}
 	<div class="container">
+		<a>
+			{{ user.username }}님 안녕하세요!
+		</a>
 		<div class="logo-view">
                 	<img class="logo" src="{% static 'image/logo.png' %}">
             	</div>
