--- a/raspi/live/templates/gall.html
+++ b/raspi/live/templates/gall.html
@@ -60,7 +60,10 @@
     <body>
         {% load static %}
 	<div class="container">
-
+        {% for i in i.all %}
+        <h1 href="/streaming/{{i.ImageNumber}}"></h1>
+        <p> {{i.CreatedAt}} </p>
+        {% endfor %}
 	</div>
     <script>
 
