--- a/raspi/live/templates/gall.html
+++ b/raspi/live/templates/gall.html
@@ -61,7 +61,9 @@
         {% load static %}
 	<div class="container">
         {% for i in i.all %}
-        <h1 href="/streaming/{{i.ImageNumber}}">{{i.ImageNumber}}</h1>
+        <a href="/streaming/{{i.ImageNumber}}">
+        <h1>{{i.ImageNumber}}</h1>
+        </a>
         <p> {{i.CreatedAt}} </p>
         {% endfor %}
 	</div>
