--- a/raspi/live/templates/index.html
+++ b/raspi/live/templates/index.html
@@ -21,11 +21,12 @@
 		    height: 100vh;
 		    text-align: center;
 		}
-		h2 {
+		h1, h2 {
 		    padding-top: 5vh;
 		    font-family: Spoqa Han Sans Neo;
 		    color: #53435B;
 		}
+
 		.main-view {
 		    width: 100vh;
 		    height: 100vh;
@@ -43,6 +44,7 @@
 		    margin-left: auto;
 		    margin-right: auto;
 		}
+
 		.button-view {
 		    position: absolute;
 		    
@@ -50,13 +52,20 @@
 		    left: 50%;
   		    transform: translateX(-50%);
 		}
+
 		.img-btn {
-		    width: 100px;
+		    width: 70px;
 		    height: auto;
 		    padding: 10px;
 		    margin-left: 100px;
 		    margin-right: 100px;
+		    box-sizing: border-box;
 		}
+
+		.img-btn:hover {
+		    border: 5px solid #53435B;
+		}
+
 		@font-face {
 		    font-family: "Spoqa Han Sans Neo";
 		    font-style: normal;
